--- a/notebooks/PancakePredictPortfolio.ipynb
+++ b/notebooks/PancakePredictPortfolio.ipynb
@@ -414,8 +414,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bet_size=1\n",
-    "min_multiplier=1.0"
+    "bet_size=[1]\n",
+    "min_multiplier=[1.0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Threshold\n",
+    "As after removing the rounds with 'House' position we end up with binary classification problem, we want to leave it like that. But in production environment we can bet Bull/Bear or pass the round without betting and wait for for the model to give confident prediction.\n",
+    "We can get the probability for each class with sklearn function predict_proba. 0.5-0.5 means the model is completely not sure which class to choose, while 0.9-0.1 means its high probability that the record will be classified as the first class.\n",
+    "Let's add another hyperparameter - threshold. The model will return a class label only when the probability will be higher than the threshold. Threshold can be in range of 0.5-1, however we have to determine it experimentally."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]"
    ]
   },
   {
@@ -983,16 +1002,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Threshold\n",
-    "As after removing the rounds with 'House' position we end up with binary classification problem, we want to leave it like that. But in production environment we can bet Bull/Bear or pass the round without betting and wait for for the model to give confident prediction.\n",
-    "We can get the probability for each class with sklearn function predict_proba. 0.5-0.5 means the model is completely not sure which class to choose, while 0.9-0.1 means its high probability that the record will be classified as the first class.\n",
-    "Let's add another hyperparameter - threshold. The model will return a class label only when the probability will be higher than the threshold. Threshold can be in range of 0.5-1, however we have to determine it experimentally."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Testing the scikit-learn models"
    ]
   },
@@ -1064,7 +1073,7 @@
     "            'number_of_bets_above_threshold': df['predicted_position'].count(), 'total_number_of_bets_placed': played_rounds, 'profit': profit}\n",
     "\n",
     "\n",
-    "def main(models_name, amount_data_df, merged_train_df, clfs, threshold_list, cols_to_leave, bet_size=1, min_multiplier=0, k=10):\n",
+    "def main(models_name, amount_data_df, merged_train_df, clfs, threshold_list, cols_to_leave, bet_size_list, min_multiplier_list, k=10):\n",
     "    # k-fold cross-validation made for time series\n",
     "    tscv = TimeSeriesSplit(n_splits=k)\n",
     "    X, y = merged_train_df.drop([\"position\"], axis=1), merged_train_df[\"position\"]\n",
@@ -1072,40 +1081,41 @@
     "    data_list = []\n",
     "\n",
     "    for clf in clfs:\n",
-    "        print(f'Classifier: {clf}')\n",
     "        for threshold in threshold_list:\n",
-    "            print(f'Threshold: {threshold}')\n",
+    "            for bet_size in bet_size_list:\n",
+    "                for min_multiplier in min_multiplier_list:\n",
+    "                    print(f'Classifier: {clf} Threshold: {threshold} Bet size: {bet_size} Min multiplier: {min_multiplier}')\n",
     "\n",
-    "            kfold_data_list = []\n",
-    "\n",
-    "            current_k = 1\n",
-    "            for train_index, test_index in tscv.split(X):\n",
-    "                print(f'K: {current_k}')\n",
-    "                print(f'indexes: train: {train_index} test:{test_index}')\n",
-    "                X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
-    "                y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
-    "                \n",
-    "                data = run(current_k, models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size, min_multiplier)\n",
-    "                kfold_data_list.append(data)\n",
-    "\n",
-    "                current_k += 1\n",
-    "\n",
-    "            # Calculate the mean values\n",
-    "            mean_data = kfold_data_list[0]\n",
-    "            mean_data['total_accuracy'] = sum(d['total_accuracy'] for d in kfold_data_list) / len(kfold_data_list)\n",
-    "            mean_data['total_f1_score'] = sum(d['total_f1_score'] for d in kfold_data_list) / len(kfold_data_list)\n",
-    "            mean_data['total_number_of_bets'] = sum(d['total_number_of_bets'] for d in kfold_data_list) / len(kfold_data_list)\n",
-    "            mean_data['number_of_bets_above_threshold'] = sum(d['number_of_bets_above_threshold'] for d in kfold_data_list) / len(kfold_data_list)\n",
-    "            mean_data['total_number_of_bets_placed'] = sum(d['total_number_of_bets_placed'] for d in kfold_data_list) / len(kfold_data_list)\n",
-    "            mean_data['profit'] = sum(d['profit'] for d in kfold_data_list) / len(kfold_data_list)\n",
-    "\n",
-    "            if len([d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1]) == 0:\n",
-    "                mean_data['accuracy_above_threshold'] = np.nan\n",
-    "            else:\n",
-    "                mean_data['accuracy_above_threshold'] = sum(d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1) / len([d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1])\n",
-    "\n",
-    "            \n",
-    "            data_list.append(mean_data)\n",
+    "                    kfold_data_list = []\n",
+    "        \n",
+    "                    current_k = 1\n",
+    "                    for train_index, test_index in tscv.split(X):\n",
+    "                        print(f'K: {current_k}')\n",
+    "                        print(f'indexes: train: {train_index} test:{test_index}')\n",
+    "                        X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "                        y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "                        \n",
+    "                        data = run(current_k, models_name, amount_data_df, X_train, y_train, X_test, y_test, clf, threshold, bet_size, min_multiplier)\n",
+    "                        kfold_data_list.append(data)\n",
+    "        \n",
+    "                        current_k += 1\n",
+    "        \n",
+    "                    # Calculate the mean values\n",
+    "                    mean_data = kfold_data_list[0]\n",
+    "                    mean_data['total_accuracy'] = sum(d['total_accuracy'] for d in kfold_data_list) / len(kfold_data_list)\n",
+    "                    mean_data['total_f1_score'] = sum(d['total_f1_score'] for d in kfold_data_list) / len(kfold_data_list)\n",
+    "                    mean_data['total_number_of_bets'] = sum(d['total_number_of_bets'] for d in kfold_data_list) / len(kfold_data_list)\n",
+    "                    mean_data['number_of_bets_above_threshold'] = sum(d['number_of_bets_above_threshold'] for d in kfold_data_list) / len(kfold_data_list)\n",
+    "                    mean_data['total_number_of_bets_placed'] = sum(d['total_number_of_bets_placed'] for d in kfold_data_list) / len(kfold_data_list)\n",
+    "                    mean_data['profit'] = sum(d['profit'] for d in kfold_data_list) / len(kfold_data_list)\n",
+    "        \n",
+    "                    if len([d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1]) == 0:\n",
+    "                        mean_data['accuracy_above_threshold'] = np.nan\n",
+    "                    else:\n",
+    "                        mean_data['accuracy_above_threshold'] = sum(d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1) / len([d['accuracy_above_threshold'] for d in kfold_data_list if not d['accuracy_above_threshold'] < 0.1])\n",
+    "        \n",
+    "                    \n",
+    "                    data_list.append(mean_data)\n",
     "\n",
     "    df = pd.DataFrame(data_list)\n",
     "    return df"
@@ -1133,9 +1143,7 @@
     "\n",
     "svc_clfs = [SVC(kernel='rbf', probability=True), SVC(kernel='linear', probability=True),\n",
     "            SVC(kernel='rbf', probability=True, C=10), SVC(kernel='linear', probability=True, C=10),\n",
-    "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]\n",
-    "\n",
-    "threshold_list = [0.6, 0.7, 0.8, 0.9, 0.95]"
+    "            SVC(kernel='rbf', probability=True, C=50), SVC(kernel='linear', probability=True, C=50)]"
    ]
   },
   {
@@ -1152,7 +1160,7 @@
    "outputs": [],
    "source": [
     "experiment1_df = main(amount_data_df=merged_train_df, models_name='experiment1', merged_train_df=feature_set1_merged_train_df,\n",
-    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set1, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1173,7 +1181,7 @@
    "outputs": [],
    "source": [
     "experiment2_df = main(amount_data_df=merged_train_df, models_name='experiment2', merged_train_df=feature_set1_merged_train_df,\n",
-    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set1, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1199,7 +1207,7 @@
    "outputs": [],
    "source": [
     "experiment3_df = main(amount_data_df=merged_train_df, models_name='experiment3', merged_train_df=feature_set2_merged_train_df,\n",
-    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set2, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1218,7 +1226,7 @@
    "outputs": [],
    "source": [
     "experiment4_df = main(amount_data_df=merged_train_df, models_name='experiment4', merged_train_df=feature_set2_merged_train_df,\n",
-    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set2, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1246,7 +1254,7 @@
    "outputs": [],
    "source": [
     "experiment5_df = main(amount_data_df=merged_train_df, models_name='experiment5', merged_train_df=feature_set3_merged_train_df,\n",
-    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set3, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1268,7 +1276,7 @@
    "outputs": [],
    "source": [
     "experiment6_df = main(amount_data_df=merged_train_df, models_name='experiment6', merged_train_df=feature_set3_merged_train_df,\n",
-    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set3, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1295,7 +1303,7 @@
    "outputs": [],
    "source": [
     "experiment7_df = main(amount_data_df=merged_train_df, models_name='experiment7', merged_train_df=feature_set4_merged_train_df,\n",
-    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set4, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1314,7 +1322,7 @@
    "outputs": [],
    "source": [
     "experiment8_df = main(amount_data_df=merged_train_df, models_name='experiment8', merged_train_df=feature_set4_merged_train_df,\n",
-    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set4, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1342,7 +1350,7 @@
    "outputs": [],
    "source": [
     "experiment9_df = main(amount_data_df=merged_train_df, models_name='experiment9', merged_train_df=feature_set5_merged_train_df,\n",
-    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                      clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set5, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1361,7 +1369,7 @@
    "outputs": [],
    "source": [
     "experiment10_df = main(amount_data_df=merged_train_df, models_name='experiment10', merged_train_df=feature_set5_merged_train_df,\n",
-    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set5, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1387,7 +1395,7 @@
    "outputs": [],
    "source": [
     "experiment11_df = main(amount_data_df=merged_train_df, models_name='experiment11', merged_train_df=feature_set6_merged_train_df,\n",
-    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set6, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1406,7 +1414,7 @@
    "outputs": [],
    "source": [
     "experiment12_df = main(amount_data_df=merged_train_df, models_name='experiment12', merged_train_df=feature_set6_merged_train_df,\n",
-    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set6, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1432,7 +1440,7 @@
    "outputs": [],
    "source": [
     "experiment13_df = main(amount_data_df=merged_train_df, models_name='experiment13', merged_train_df=feature_set7_merged_train_df,\n",
-    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set7, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1453,7 +1461,7 @@
    "outputs": [],
    "source": [
     "experiment14_df = main(amount_data_df=merged_train_df, models_name='experiment14', merged_train_df=feature_set7_merged_train_df,\n",
-    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set7, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1479,7 +1487,7 @@
    "outputs": [],
    "source": [
     "experiment15_df = main(amount_data_df=merged_train_df, models_name='experiment15', merged_train_df=feature_set8_merged_train_df,\n",
-    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set8, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1498,7 +1506,7 @@
    "outputs": [],
    "source": [
     "experiment16_df = main(amount_data_df=merged_train_df, models_name='experiment16', merged_train_df=feature_set8_merged_train_df,\n",
-    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set8, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1524,7 +1532,7 @@
    "outputs": [],
    "source": [
     "experiment17_df = main(amount_data_df=merged_train_df, models_name='experiment17', merged_train_df=feature_set9_merged_train_df,\n",
-    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=clfs, threshold_list=threshold_list, cols_to_leave=feature_set9, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
@@ -1543,7 +1551,7 @@
    "outputs": [],
    "source": [
     "experiment18_df = main(amount_data_df=merged_train_df, models_name='experiment18', merged_train_df=feature_set9_merged_train_df,\n",
-    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9, bet_size=bet_size, min_multiplier=min_multiplier)"
+    "                       clfs=svc_clfs, threshold_list=threshold_list, cols_to_leave=feature_set9, bet_size_list=bet_size, min_multiplier_list=min_multiplier)"
    ]
   },
   {
